# junit-report-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: collections.rs  error.rs  lib.rs  reports.rs
tests/: JUnit-alterantive.xsd  JUnit.xsd  README.md  generated.xml  integration_test.rs  reference.xml
