[package]
name = "junit-report"
version = "0.8.4"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
description = "Create JUnit compatible XML reports."
license = "MIT"
repository = "https://github.com/bachp/junit-report-rs"
keywords = ["junit", "xunit", "xml", "report"]
readme = "README.md"
edition = "2021"

[dependencies]
derive-getters = "0.4.0"
quick-xml = "0.36.1"
time = { version = "0.3.36", features = ["formatting", "macros"], default-features = false }

[dev-dependencies]
doc-comment = "0.3.3"
once_cell = "1.14"
pretty_assertions = "1.4.0"
regex = "1.10"
