[package]
name = "junit-report"
version = "0.8.4"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
description = "Create JUnit compatible XML reports."
license = "MIT"
repository = "https://github.com/bachp/junit-report-rs"
keywords = ["junit", "xunit", "xml", "report"]
readme = "README.md"
edition = "2021"

[dependencies]
derive-getters = "0.5.0"
quick-xml = "0.39"
time = { version = "0.3.45", features = ["formatting", "macros"], default-features = false }


[dev-dependencies]
doc-comment = "0.3.4"
once_cell = "1.21"
pretty_assertions = "1.4.1"
regex = "1.12"
